# isloveblind

./: README.md  face_detection.py  face_mesh.py  graphics.py  pyproject.toml  quartz-detection.py  quartz_detection.py  windows.py
